Dark Mode Toggle(Buggy)
Not everything is set to dark mode

--- a/apex-tracker/src/App.css
+++ b/apex-tracker/src/App.css
@@ -2,7 +2,9 @@
     color: black;
 }
 
+
 .body {
+  background-color: black;
   font-family: 'Ubuntu', sans-serif;
 }
 
